<resources>
    <string name="app_name">Blog App</string>
    
    <!-- Welcome Screen -->
    <string name="welcome_title">Welcome to Blog App</string>
    <string name="welcome_subtitle">Share your stories with the world</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    
    <!-- Auth Screens -->
    <string name="login_title">Login</string>
    <string name="register_title">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    
    <!-- Home Screen -->
    <string name="home_title">Home</string>
    <string name="no_blogs_yet">No blogs yet. Be the first to create one!</string>
    <string name="loading">Loading…</string>
    
    <!-- Add Blog Screen -->
    <string name="add_blog_title">Create Blog</string>
    <string name="blog_title">Blog Title</string>
    <string name="blog_content">Write your content here…</string>
    <string name="select_image">Select Image</string>
    <string name="publish">Publish</string>
    <string name="cancel">Cancel</string>
    
    <!-- Profile Screen -->
    <string name="profile_title">Profile</string>
    <string name="my_blogs">My Blogs</string>
    <string name="saved_blogs">Saved Articles</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    
    <!-- Bottom Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_add">Add</string>
    <string name="nav_profile">Profile</string>
    
    <!-- Blog Actions -->
    <string name="like">Like</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    
    <!-- Messages -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_blog_message">Do you want to delete this blog?</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Validation Messages -->
    <string name="error_empty_email">Email is required</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_empty_password">Password is required</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="error_empty_name">Name is required</string>
    <string name="error_short_name">Name must be at least 3 characters</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="error_empty_title">Title is required</string>
    <string name="error_empty_content">Content is required</string>
    <string name="error_select_image">Please select an image</string>
    
    <!-- Common -->
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
</resources>